--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ZendeskTheme",
   "author": "Exclaimer - Michael Sutcliffe",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
@@ -56,7 +56,15 @@
           "description": "background_color_description",
           "label": "background_color_label",
           "value": "#FFFFFF"
+        },
+        {
+          "identifier": "primary_color",
+          "type": "color",
+          "description": "primary_color_description",
+          "label": "primary_color_label",
+          "value": "#FFFFFF"
         }
+        
       ]
     },
     {
@@ -67,15 +75,15 @@
           "type": "list",
           "description": "heading_font_description",
           "label": "heading_font_label",
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
+          "value": "Roboto, sans-serif",
           "options": [
-            {
-              "label": "System",
-              "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
-            },
             {
               "label": "Roboto",
               "value": "Roboto, sans-serif"
+            },
+            {
+              "label": "System",
+              "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
             },
             {
               "label": "Arial",
@@ -144,8 +152,12 @@
           "type": "list",
           "description": "text_font_description",
           "label": "text_font_label",
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
+          "value": "Roboto, sans-serif",
           "options": [
+            {
+              "label": "Roboto",
+              "value": "Roboto, sans-serif"
+            },
             {
               "label": "System",
               "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
@@ -228,7 +240,7 @@
           "type": "checkbox",
           "description": "show_brand_name_description",
           "label": "show_brand_name_label",
-          "value": true
+          "value": false
         },
         {
           "identifier": "favicon",
