--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "ZendeskTheme",
+  "name": "Exclaimer Guides",
   "author": "Exclaimer - Michael Sutcliffe",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
@@ -56,15 +56,7 @@
           "description": "background_color_description",
           "label": "background_color_label",
           "value": "#FFFFFF"
-        },
-        {
-          "identifier": "primary_color",
-          "type": "color",
-          "description": "primary_color_description",
-          "label": "primary_color_label",
-          "value": "#FFFFFF"
         }
-        
       ]
     },
     {
